--- a/project_eco_find/Base.lproj/Main.storyboard
+++ b/project_eco_find/Base.lproj/Main.storyboard
@@ -87,34 +87,56 @@
             <objects>
                 <viewController id="Hs7-u0-DGR" customClass="MapViewController" customModule="project_eco_find" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hYC-eC-AvN">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="930" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gEh-jw-fm4">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="930" height="774"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="774" id="WWO-zU-O9o"/>
+                                </constraints>
                             </mapView>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ljE-jX-aKt">
-                                <rect key="frame" x="9.5" y="108" width="395" height="32"/>
-                                <segments>
-                                    <segment title="First"/>
-                                    <segment title="Second"/>
-                                    <segment title=""/>
-                                    <segment title=""/>
-                                    <segment title=""/>
-                                    <segment title=""/>
-                                </segments>
-                                <connections>
-                                    <action selector="changeMapType:" destination="Hs7-u0-DGR" eventType="valueChanged" id="guM-37-ZxH"/>
-                                </connections>
-                            </segmentedControl>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="orP-vS-kDr">
+                                <rect key="frame" x="0.0" y="88" width="930" height="48"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ljE-jX-aKt">
+                                        <rect key="frame" x="0.0" y="8" width="930" height="42"/>
+                                        <segments>
+                                            <segment title="Все"/>
+                                            <segment title="Пластик"/>
+                                            <segment title="Бумага"/>
+                                            <segment title="Металл"/>
+                                            <segment title="Органические"/>
+                                            <segment title="Стекло"/>
+                                            <segment title="Композиционные"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="changeMapType:" destination="Hs7-u0-DGR" eventType="valueChanged" id="kLj-e0-rOM"/>
+                                        </connections>
+                                    </segmentedControl>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="jrx-4f-RSA" firstAttribute="bottom" secondItem="ljE-jX-aKt" secondAttribute="bottom" id="0f8-xj-4Gw"/>
+                                    <constraint firstItem="ljE-jX-aKt" firstAttribute="trailing" secondItem="80S-DM-qgv" secondAttribute="trailing" id="1Ae-hJ-KCt"/>
+                                    <constraint firstAttribute="bottom" secondItem="ljE-jX-aKt" secondAttribute="bottom" id="3IC-4a-1tb"/>
+                                    <constraint firstAttribute="height" constant="48" id="Edb-Kh-zlz"/>
+                                    <constraint firstItem="ljE-jX-aKt" firstAttribute="top" secondItem="jrx-4f-RSA" secondAttribute="top" constant="7" id="Ft2-8B-jav"/>
+                                    <constraint firstAttribute="width" constant="930" id="oK3-DK-axD"/>
+                                    <constraint firstItem="ljE-jX-aKt" firstAttribute="centerX" secondItem="orP-vS-kDr" secondAttribute="centerX" id="q2z-tY-v8J"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="80S-DM-qgv"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="jrx-4f-RSA"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="3uy-zs-VGE" firstAttribute="bottom" secondItem="gEh-jw-fm4" secondAttribute="bottom" id="1tJ-yb-DgT"/>
-                            <constraint firstItem="ljE-jX-aKt" firstAttribute="centerX" secondItem="hYC-eC-AvN" secondAttribute="centerX" id="4aa-Vs-0GQ"/>
                             <constraint firstItem="gEh-jw-fm4" firstAttribute="top" secondItem="3uy-zs-VGE" secondAttribute="top" id="F7k-Pc-4Au"/>
-                            <constraint firstItem="ljE-jX-aKt" firstAttribute="top" secondItem="3uy-zs-VGE" secondAttribute="top" constant="20" id="N3h-Tt-wEp"/>
+                            <constraint firstItem="3uy-zs-VGE" firstAttribute="bottom" secondItem="orP-vS-kDr" secondAttribute="bottom" constant="726" id="UPA-N1-fbf"/>
+                            <constraint firstItem="orP-vS-kDr" firstAttribute="top" secondItem="gEh-jw-fm4" secondAttribute="top" id="Vj5-Mk-25h"/>
+                            <constraint firstItem="orP-vS-kDr" firstAttribute="leading" secondItem="gEh-jw-fm4" secondAttribute="leading" id="awK-LV-IVo"/>
                             <constraint firstItem="gEh-jw-fm4" firstAttribute="leading" secondItem="3uy-zs-VGE" secondAttribute="leading" id="h7v-Uy-0vi"/>
+                            <constraint firstItem="orP-vS-kDr" firstAttribute="trailing" secondItem="gEh-jw-fm4" secondAttribute="trailing" id="hCL-pU-IBK"/>
                             <constraint firstItem="3uy-zs-VGE" firstAttribute="trailing" secondItem="gEh-jw-fm4" secondAttribute="trailing" id="rbH-fM-pGl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3uy-zs-VGE"/>
@@ -131,15 +153,15 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <size key="freeformSize" width="930" height="896"/>
                     <connections>
                         <outlet property="mapView" destination="gEh-jw-fm4" id="dhw-53-qxF"/>
-                        <outlet property="segmentedView" destination="ljE-jX-aKt" id="VIx-NL-JfW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fBI-dz-WrK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="6LO-QW-Asj" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3107" y="76"/>
+            <point key="canvasLocation" x="3757.971014492754" y="95.758928571428569"/>
         </scene>
         <!--Категории упаковок-->
         <scene sceneID="R3p-I5-H2p">
