--- a/project_eco_find/Base.lproj/Main.storyboard
+++ b/project_eco_find/Base.lproj/Main.storyboard
@@ -87,59 +87,29 @@
             <objects>
                 <viewController id="Hs7-u0-DGR" customClass="MapViewController" customModule="project_eco_find" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hYC-eC-AvN">
-                        <rect key="frame" x="0.0" y="0.0" width="930" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gEh-jw-fm4">
-                                <rect key="frame" x="0.0" y="88" width="930" height="774"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="774" id="WWO-zU-O9o"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                             </mapView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="orP-vS-kDr">
-                                <rect key="frame" x="0.0" y="88" width="930" height="89"/>
-                                <subviews>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ljE-jX-aKt">
-                                        <rect key="frame" x="0.0" y="0.0" width="930" height="90"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="89" id="YID-E6-TvW"/>
-                                        </constraints>
-                                        <segments>
-                                            <segment title="Все"/>
-                                            <segment title="Пластик"/>
-                                            <segment title="Бумага"/>
-                                            <segment title="Металл"/>
-                                            <segment title="Органические"/>
-                                            <segment title="Стекло"/>
-                                            <segment title="Композиционные"/>
-                                        </segments>
-                                        <connections>
-                                            <action selector="changeMapType:" destination="Hs7-u0-DGR" eventType="valueChanged" id="kLj-e0-rOM"/>
-                                        </connections>
-                                    </segmentedControl>
-                                </subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EKX-Sm-PUx">
+                                <rect key="frame" x="0.0" y="88" width="414" height="32"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstItem="ljE-jX-aKt" firstAttribute="bottom" secondItem="jrx-4f-RSA" secondAttribute="bottom" id="3xG-Yj-zDE"/>
-                                    <constraint firstAttribute="bottom" secondItem="ljE-jX-aKt" secondAttribute="bottom" id="4Xp-yU-p8i"/>
-                                    <constraint firstAttribute="height" constant="89" id="54X-et-xSY"/>
-                                    <constraint firstItem="ljE-jX-aKt" firstAttribute="top" secondItem="jrx-4f-RSA" secondAttribute="top" id="Bix-0f-qfh"/>
-                                    <constraint firstAttribute="trailing" secondItem="ljE-jX-aKt" secondAttribute="trailing" id="MNJ-ya-7BH"/>
-                                    <constraint firstItem="ljE-jX-aKt" firstAttribute="leading" secondItem="jrx-4f-RSA" secondAttribute="leading" id="lqC-Bs-Obh"/>
-                                    <constraint firstItem="ljE-jX-aKt" firstAttribute="trailing" secondItem="jrx-4f-RSA" secondAttribute="trailing" id="uR0-GF-kU8"/>
+                                    <constraint firstAttribute="height" constant="32" id="WXj-Z0-skN"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="80S-DM-qgv"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="jrx-4f-RSA"/>
-                            </scrollView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="3uy-zs-VGE" firstAttribute="bottom" secondItem="gEh-jw-fm4" secondAttribute="bottom" id="1tJ-yb-DgT"/>
-                            <constraint firstItem="gEh-jw-fm4" firstAttribute="top" secondItem="3uy-zs-VGE" secondAttribute="top" id="F7k-Pc-4Au"/>
-                            <constraint firstItem="orP-vS-kDr" firstAttribute="top" secondItem="gEh-jw-fm4" secondAttribute="top" id="IKH-XW-0ED"/>
-                            <constraint firstItem="gEh-jw-fm4" firstAttribute="leading" secondItem="3uy-zs-VGE" secondAttribute="leading" id="h7v-Uy-0vi"/>
-                            <constraint firstItem="3uy-zs-VGE" firstAttribute="bottom" secondItem="orP-vS-kDr" secondAttribute="bottom" constant="685" id="puI-oo-5d3"/>
-                            <constraint firstItem="3uy-zs-VGE" firstAttribute="trailing" secondItem="gEh-jw-fm4" secondAttribute="trailing" id="rbH-fM-pGl"/>
-                            <constraint firstItem="orP-vS-kDr" firstAttribute="leading" secondItem="gEh-jw-fm4" secondAttribute="leading" id="uJW-Z4-DVI"/>
+                            <constraint firstItem="gEh-jw-fm4" firstAttribute="trailing" secondItem="3uy-zs-VGE" secondAttribute="trailing" id="5eo-Vl-cxa"/>
+                            <constraint firstItem="EKX-Sm-PUx" firstAttribute="leading" secondItem="3uy-zs-VGE" secondAttribute="leading" id="J4h-L9-66c"/>
+                            <constraint firstItem="gEh-jw-fm4" firstAttribute="top" secondItem="3uy-zs-VGE" secondAttribute="top" id="auq-PB-vjv"/>
+                            <constraint firstItem="EKX-Sm-PUx" firstAttribute="trailing" secondItem="3uy-zs-VGE" secondAttribute="trailing" id="bls-1Q-wzI"/>
+                            <constraint firstItem="gEh-jw-fm4" firstAttribute="leading" secondItem="3uy-zs-VGE" secondAttribute="leading" id="e9v-Ap-xGq"/>
+                            <constraint firstItem="EKX-Sm-PUx" firstAttribute="top" secondItem="3uy-zs-VGE" secondAttribute="top" id="i8n-5j-e92"/>
+                            <constraint firstAttribute="bottom" secondItem="gEh-jw-fm4" secondAttribute="bottom" id="qfj-Fs-JLl"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3uy-zs-VGE"/>
                     </view>
@@ -155,9 +125,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <size key="freeformSize" width="930" height="896"/>
                     <connections>
                         <outlet property="mapView" destination="gEh-jw-fm4" id="dhw-53-qxF"/>
+                        <outlet property="mySegmentedControl" destination="EKX-Sm-PUx" id="GuU-79-c3z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fBI-dz-WrK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -776,6 +746,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="0TZ-Cs-5hC"/>
+        <segue reference="ppm-sL-L4d"/>
     </inferredMetricsTieBreakers>
 </document>
