--- a/project_eco_find/Base.lproj/Main.storyboard
+++ b/project_eco_find/Base.lproj/Main.storyboard
@@ -93,10 +93,28 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gEh-jw-fm4">
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                             </mapView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" apportionsSegmentWidthsByContent="YES" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="UiY-zs-4p0">
+                                <rect key="frame" x="0.0" y="88" width="414" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="RZo-vK-Dqu"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Все"/>
+                                    <segment title="Пластик"/>
+                                    <segment title="Бумага"/>
+                                    <segment title="Металл"/>
+                                    <segment title="Органика"/>
+                                    <segment title="Стекло"/>
+                                    <segment title="Композиционный"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="UiY-zs-4p0" firstAttribute="top" secondItem="3uy-zs-VGE" secondAttribute="top" id="3oB-2f-ILN"/>
                             <constraint firstItem="gEh-jw-fm4" firstAttribute="trailing" secondItem="3uy-zs-VGE" secondAttribute="trailing" id="5eo-Vl-cxa"/>
+                            <constraint firstItem="UiY-zs-4p0" firstAttribute="leading" secondItem="3uy-zs-VGE" secondAttribute="leading" id="W5N-jB-DhK"/>
+                            <constraint firstItem="UiY-zs-4p0" firstAttribute="trailing" secondItem="3uy-zs-VGE" secondAttribute="trailing" id="aBH-F4-GsT"/>
                             <constraint firstItem="gEh-jw-fm4" firstAttribute="top" secondItem="3uy-zs-VGE" secondAttribute="top" id="auq-PB-vjv"/>
                             <constraint firstItem="gEh-jw-fm4" firstAttribute="leading" secondItem="3uy-zs-VGE" secondAttribute="leading" id="e9v-Ap-xGq"/>
                             <constraint firstAttribute="bottom" secondItem="gEh-jw-fm4" secondAttribute="bottom" id="qfj-Fs-JLl"/>
